<resources>
    <string name="app_name">Multility</string>
    <string name="app_desc">An App for Sensors and Functionality</string>
	<string name="gyroscope">Gyroscope</string>
	<string name="loading">Loading…</string>
	<string name="loading_sensor_name">Loading Sensor\'s Name…</string>
	<string name="settings">Settings</string>
	<string name="return_to_main_menu">Return to Main Menu</string>
	<string name="ambient_temperature">Ambient Temperature</string>
	<string name="gravity">Gravity</string>
	<string name="light">Light</string>
	<string name="accelerometer">Accelerometer</string>
</resources>
