<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/settings"
		android:icon="@drawable/ic_settings_black_24dp"
		android:orderInCategory="0"
		android:title="@string/settings"
		app:showAsAction="ifRoom"
		android:onClick="openSettings" />


	<item
		android:id="@+id/accelerometer"
		android:onClick="openAccelerometer"
		android:orderInCategory="1"
		android:title="@string/accelerometer" />

	<item
		android:id="@+id/ambientTemperature"
		android:onClick="openAmbientTemperature"
		android:orderInCategory="1"
		android:title="@string/ambient_temperature" />

	<item
		android:id="@+id/gravity"
		android:onClick="openGravity"
		android:orderInCategory="1"
		android:title="@string/gravity" />

	<item
		android:id="@+id/gyroscope"
		android:onClick="openGyroscope"
		android:orderInCategory="1"
		android:title="@string/gyroscope" />

	<item
		android:id="@+id/light"
		android:onClick="openLight"
		android:orderInCategory="1"
		android:title="@string/light" />


	<item
		android:id="@+id/returnToMainMenu"
		android:icon="@drawable/ic_exit_to_app_black_24dp"
		android:orderInCategory="2"
		android:title="@string/return_to_main_menu"
		app:showAsAction="ifRoom"
		android:onClick="returnToMainMenu" />
</menu>